...
                onClick = onContinuarClick,
                colors = ButtonDefaults.buttonColors(
                    containerColor = MaterialTheme.colorScheme.primary
                )
            ) {
                Text(
                    text = "Continuar",
                    color = MaterialTheme.colorScheme.onPrimary
                )
            }
        }
    }
}
