...
                        .fillMaxWidth()
                        .padding(horizontal = 20.dp, vertical = 20.dp),
                    verticalAlignment = Alignment.CenterVertically
                ) {
                    Column(modifier = Modifier.weight(1f)) {
                        Text(
                            text = "Hola,",
                            fontSize = 16.sp,
                            color = Color.White
                        )
                        Text(
                            text = userName,
                            fontSize = 24.sp,
...
